Code cleanup in Accounts Service. Changing response placement of the GetAccountID
 Deleting unused, changing logging verbosity, changing some RestAPI-endpoints paths.
