# accounts_service/swagger/docs/api.swagger.json
@@ -24,127 +24,8 @@
     "application/json"
   ],
   "paths": {
-    "/v1/account-id": {
-      "get": {
-        "operationId": "accountsServiceV1_GetAccountID",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/accounts_serviceAccountID"
-            }
-          },
-          "400": {
-            "description": "Returned when has problem with parameters in headers.",
-            "schema": {}
-          },
-          "401": {
-            "description": "Returned when X-Session-Id not found in header params.",
-            "schema": {}
-          },
-          "403": {
-            "description": "Returned when the user does not have permission to access the resource.",
-            "schema": {
-              "type": "string",
-              "format": "string"
-            }
-          },
-          "404": {
-            "description": "Returned when session with specified id not found.",
-            "schema": {}
-          },
-          "500": {
-            "description": "Something went wrong.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "X-Session-Id",
-            "description": "ID of the session issued when logging in to the account",
-            "in": "header",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "X-Client-Ip",
-            "description": "IP address of the user's client",
-            "in": "header",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "tags": [
-          "accountsServiceV1"
-        ]
-      }
-    },
-    "/v1/account/create": {
-      "post": {
-        "operationId": "accountsServiceV1_CreateAccount",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "type": "object",
-              "properties": {}
-            }
-          },
-          "400": {
-            "description": "Returned when specified params is not valid or account with this email alredy exist.",
-            "schema": {}
-          },
-          "403": {
-            "description": "Returned when the user does not have permission to access the resource.",
-            "schema": {
-              "type": "string",
-              "format": "string"
-            }
-          },
-          "404": {
-            "description": "Returned when the resource does not exist.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          },
-          "500": {
-            "description": "Something went wrong.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/accounts_serviceCreateAccountRequest"
-            }
-          }
-        ],
-        "tags": [
-          "accountsServiceV1"
-        ]
-      }
-    },
-    "/v1/account/delete": {
-      "post": {
+    "/v1/account": {
+      "delete": {
         "operationId": "accountsServiceV1_DeleteAccount",
         "responses": {
           "200": {
@@ -207,19 +88,28 @@
         ]
       }
     },
-    "/v1/change-password": {
-      "post": {
-        "operationId": "accountsServiceV1_ChangePassword",
+    "/v1/account-id": {
+      "get": {
+        "operationId": "accountsServiceV1_GetAccountID",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
               "type": "object",
               "properties": {}
+            },
+            "headers": {
+              "Grpc-Metadata-X-Account-Id": {
+                "type": "string"
+              }
             }
           },
           "400": {
-            "description": "Returned when has wrong token or specified password not valid.",
+            "description": "Returned when has problem with parameters in headers.",
+            "schema": {}
+          },
+          "401": {
+            "description": "Returned when X-Session-Id not found in header params.",
             "schema": {}
           },
           "403": {
@@ -230,7 +120,7 @@
             }
           },
           "404": {
-            "description": "Returned when specified account with email in token not found.",
+            "description": "Returned when session with specified id not found.",
             "schema": {}
           },
           "500": {
@@ -248,12 +138,18 @@
         },
         "parameters": [
           {
-            "name": "body",
-            "in": "body",
+            "name": "X-Session-Id",
+            "description": "ID of the session issued when logging in to the account",
+            "in": "header",
             "required": true,
-            "schema": {
-              "$ref": "#/definitions/accounts_serviceChangePasswordRequest"
-            }
+            "type": "string"
+          },
+          {
+            "name": "X-Client-Ip",
+            "description": "IP address of the user's client",
+            "in": "header",
+            "required": true,
+            "type": "string"
           }
         ],
         "tags": [
@@ -261,7 +157,7 @@
         ]
       }
     },
-    "/v1/change-password/request": {
+    "/v1/change-password": {
       "get": {
         "summary": "Sending message into email queue with change password token",
         "operationId": "accountsServiceV1_RequestChangePasswordToken",
@@ -309,6 +205,58 @@
             "in": "query",
             "required": false,
             "type": "string"
+          }
+        ],
+        "tags": [
+          "accountsServiceV1"
+        ]
+      },
+      "post": {
+        "operationId": "accountsServiceV1_ChangePassword",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
+          },
+          "400": {
+            "description": "Returned when has wrong token or specified password not valid.",
+            "schema": {}
+          },
+          "403": {
+            "description": "Returned when the user does not have permission to access the resource.",
+            "schema": {
+              "type": "string",
+              "format": "string"
+            }
+          },
+          "404": {
+            "description": "Returned when specified account with email in token not found.",
+            "schema": {}
+          },
+          "500": {
+            "description": "Something went wrong.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/accounts_serviceChangePasswordRequest"
+            }
           }
         ],
         "tags": [
@@ -577,7 +525,63 @@
         ]
       }
     },
-    "/v1/verification/request": {
+    "/v1/sign-up": {
+      "post": {
+        "operationId": "accountsServiceV1_CreateAccount",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
+          },
+          "400": {
+            "description": "Returned when specified params is not valid or account with this email alredy exist.",
+            "schema": {}
+          },
+          "403": {
+            "description": "Returned when the user does not have permission to access the resource.",
+            "schema": {
+              "type": "string",
+              "format": "string"
+            }
+          },
+          "404": {
+            "description": "Returned when the resource does not exist.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          },
+          "500": {
+            "description": "Something went wrong.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/accounts_serviceCreateAccountRequest"
+            }
+          }
+        ],
+        "tags": [
+          "accountsServiceV1"
+        ]
+      }
+    },
+    "/v1/verification": {
       "get": {
         "summary": "Sending message into email queue with account verification token",
         "operationId": "accountsServiceV1_RequestAccountVerificationToken",
@@ -638,7 +642,7 @@
         ]
       }
     },
-    "/v1/verify/{verification_token}": {
+    "/v1/verification/{verification_token}": {
       "post": {
         "operationId": "accountsServiceV1_VerifyAccount",
         "responses": {
@@ -704,14 +708,6 @@
       "type": "object",
       "properties": {
         "session_id": {
-          "type": "string"
-        }
-      }
-    },
-    "accounts_serviceAccountID": {
-      "type": "object",
-      "properties": {
-        "account_id": {
           "type": "string"
         }
       }
